<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="2"
       android:orientation="horizontal">
       
       <LinearLayout 
         	android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:layout_weight="1"
    		android:orientation="vertical" >

	       <TextView
	           android:id="@+id/name_label"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:text="@string/txt_name" />

		    <EditText
		        android:id="@+id/name_text"
		        android:layout_height="0dp" 
		        android:layout_width="match_parent"
		        android:layout_weight="1"
		        android:layout_marginRight="10dp" >"
			</EditText>
		</LinearLayout>
		
       <LinearLayout 
         	android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:layout_weight="1"
    		android:orientation="vertical" >

		<TextView
		    android:id="@+id/phone_label"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_phone" />

	    <EditText
	        android:id="@+id/phone_text"
	        android:layout_height="0dp"
	        android:layout_width="match_parent"
	        android:layout_weight="1"
	        android:layout_marginLeft="10dp" >
		</EditText>
	</LinearLayout>
	</LinearLayout>

	<LinearLayout 
    	android:layout_width="match_parent"
       	android:layout_height="0dp"
       	android:layout_weight="1">
	    <Button
	        android:id="@+id/set_done"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:text="@string/btn_done" >
		</Button>
	</LinearLayout>
</LinearLayout>
